# interview.ai

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: coach_agent.py  evaluator_agent.py  interviewer_agent.py  research_agent.py  resume_agent.py
backend/app/api/: auth.py  interview.py  resume.py
backend/app/config/: settings.py
backend/app/database/: models.py  session.py
backend/app/schemas/: interview.py  resume.py  user.py
backend/app/services/: gemini_service.py  pdf_service.py  storage_service.py  supabase_client.py  voice_service.py
backend/app/workflows/: interview_graph.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: InterviewChat.jsx  ResumeUpload.jsx  ScoreCard.jsx
frontend/src/pages/: Dashboard.jsx  Interview.jsx  Landing.jsx  Report.jsx
