[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
